# androidCameraMotionTracker

./: import-summary.txt  settings.gradle
OpenCV455/: build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cameramotiontracker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yuv2rgb-jni.cc  yuv2rgb.cc  yuv2rgb.h
app/src/main/java/com/example/cameramotiontracker/: AndroidCamera.java  ImagePreprocessor.java  MainActivity.java  PoseEstimator.java  YuvConverter.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cameramotiontracker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary455/: build.gradle
